Fix links stretching over the whole width

--- a/assets/sass/_toc.scss
+++ b/assets/sass/_toc.scss
@@ -38,7 +38,7 @@ aside, .toc {
 	}
 
 	a {
-		display: block;
+		display: inline-block;
 		color: $white;
 		text-decoration: none;
 		margin-bottom: 0.3em;
